# ot-harjoitustyo

./: .gitignore  README.md
Game-library/: .coveragerc  .pylintrc  game_library.db  pyproject.toml  tasks.py
Game-library/dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  testaus.md  tyoaikakirjanpito.md  vaatimusmaarittely.md
Game-library/src/: build.py  config.py  database_connection.py  index.py  initialize_database.py  seed_console_model.py  seed_consoles.py  seed_genres.py
Game-library/src/entities/: game.py
Game-library/src/repositories/: console_model_repository.py  console_repository.py  game_repository.py  genre_repository.py
Game-library/src/services/: console_model_service.py  console_service.py  game_service.py  genre_service.py
Game-library/src/tests/repositories/: console_model_repository_test.py  console_repository_test.py  game_repository_test.py  genre_repository_test.py
Game-library/src/tests/services/: console_model_service_test.py  console_service_test.py  game_service_test.py  genre_service_test.py
Game-library/src/ui/: add_game_view.py  main_menu_view.py  played_view.py  playing_view.py  rate_game_view.py  search_view.py  ui.py  wish_to_play_view.py
dokumentaatio/: tyoaikakirjanpito.md
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/: maksukortti.py
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: tehtava1.md  tehtava2.md
